# the-complexity-trap

./: .cursorignore  .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/: dependabot.yml
.run/: run_sweagent.run.xml
auxiliary-data/: bootstrapped_cis.csv  bootstrapped_cis_openhands.csv  eval_results-swe_agent.tar  experiment_instance_costs_combined.csv  experiment_instance_costs_openhands.csv  experiment_instance_costs_sweagent.csv  paired_ci_diffs_vs_raw.csv  paired_ci_diffs_vs_raw_openhands.csv
config/: default_no_demo.yaml  default_no_demo_N=1_M=10.yaml  default_no_demo_N=1_M=20.yaml  default_no_demo_actions_reasoning_truncated_N=21.yaml  default_no_demo_actions_truncated_N=1_M=1.yaml  default_no_demo_actions_truncated_N=1_M=10.yaml  default_no_demo_actions_truncated_N=1_M=5.yaml  default_no_demo_actions_truncated_N=21.yaml  default_no_demo_actions_truncated_reasoning_full_N=21.yaml  default_no_demo_basic_prompt.yaml  default_no_demo_checkpoint_plan_same_model_N=21_critic.yaml  default_no_demo_checkpoint_same_model_N=21_M=10_critic_best.yaml  default_no_demo_checkpoint_same_model_N=21_critic.yaml  default_no_demo_checkpoint_same_model_N=21_critic_M_10.yaml  default_no_demo_checkpoint_same_model_N=21_critic_best.yaml  default_no_demo_checkpoint_same_model_openhands_N=10.yaml  default_no_demo_checkpoint_same_model_openhands_N=21_M=0.yaml  default_no_demo_checkpoint_same_model_openhands_N=21_M=10.yaml  default_no_demo_checkpoint_same_model_openhands_N=21_M=10_masking_M=10.yaml  (+27 more)
scripts/: run_batch.sh  (+22 more)
train/: nebius_to_oai.py  pyproject.toml
(+34 files in other folders)
